cloudnet 4.0.0 adjustements